# smelt

./: .gitignore  Cargo.toml  README.md  llm-say.md
src/: lib.rs  main.rs
test_resc/: has_yaml.md  missing_yaml.md  not_markdown.txt
test_resc/attachment/atta_sub_dir/: atta.md
test_resc/sub_dir/: bad_value_type.md  missing_key.md
test_resc/sub_dir/attachment/: atta_sub.txt
